--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "sonner": "^2.0.3",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
