--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
